diagnostico9.txt
bitnami@ip-172-26-1-205:~/sorteo-web/web$ curl -i "https://elpelasorteos.shop/api/payments/verificar?op=131185946716
> 
> ^C
bitnami@ip-172-26-1-205:~/sorteo-web/web$ docker compose exec -it web sh 
/app $ ls -l /app/microservices/integracion_mercadopago_app/scripts/query_payment.py /app/
   
-rw-r--r--    1 node     node          2480 Oct 27 07:00 /app/microservices/integracion_mercadopago_app/scripts/query_payment.py

/app/:
total 512
-rw-rw-rw-    1 appuser  appgroup       309 Oct 22 17:18 AGENTS.md
-rw-r--r--    1 appuser  appgroup       119 Oct 26 04:21 Caddyfile
-rw-r--r--    1 appuser  appgroup      1714 Oct 27 07:55 DEPLOY_LIGHTSAIL.md
-rw-r--r--    1 appuser  appgroup      2146 Oct 26 04:21 DNS_NAMECHEAP_LIGHTSAIL.md
-rw-r--r--    1 appuser  appgroup       682 Oct 27 07:00 Dockerfile
-rw-rw-rw-    1 appuser  appgroup        32 Oct 24 23:14 GEMINI.md
-rw-r--r--    1 appuser  appgroup      4996 Oct 26 04:21 INSTRUCTIVO.txt
-rw-r--r--    1 appuser  appgroup      1074 Oct 27 07:55 LICENSE
-rw-r--r--    1 appuser  appgroup      4911 Oct 26 04:21 README.md
-rw-r--r--    1 appuser  appgroup      5182 Oct 26 04:21 README_es.md
-rw-r--r--    1 appuser  appgroup     10938 Oct 26 04:21 apple-touch-icon.png
drwxrwxrwx    2 node     node          4096 Oct 27 04:09 data
-rwxr-xr-x    1 appuser  appgroup       472 Oct 26 02:52 deploy.sh
-rw-r--r--    1 appuser  appgroup       610 Oct 27 07:00 docker-compose.yml
-rw-r--r--    1 appuser  appgroup       510 Oct 27 04:55 docker-compose.yml.bak
-rw-r--r--    1 appuser  appgroup      2821 Oct 27 07:00 duda.txt
-rw-r--r--    1 appuser  appgroup      1116 Oct 26 04:21 favicon-16x16.png
-rw-r--r--    1 appuser  appgroup      1950 Oct 26 04:21 favicon-32x32.png
-rw-r--r--    1 appuser  appgroup    215254 Oct 26 04:21 favicon.png
drwxrwxrwx    1 appuser  appgroup      4096 Oct 26 04:21 ganadoresanteriores
-rw-r--r--    1 appuser  appgroup      2792 Oct 26 04:21 index.html
-rw-r--r--    1 appuser  appgroup      3317 Oct 27 04:09 logs_cambios.txt
drwxr-xr-x    1 appuser  appgroup      4096 Oct 27 04:09 microservices
drwxr-xr-x    1 appuser  appgroup      4096 Oct 26 04:21 node_modules
-rw-r--r--    1 appuser  appgroup    124549 Oct 26 04:21 package-lock.json
-rw-r--r--    1 appuser  appgroup       590 Oct 26 04:21 package.json
-rw-r--r--    1 appuser  appgroup      3227 Oct 26 04:21 resumen_cli.txt
-rw-r--r--    1 appuser  appgroup        72 Oct 26 04:21 robots.txt
drwxrwxrwx    1 appuser  appgroup      4096 Oct 27 04:09 scripts
drwxrwxrwx    1 appuser  appgroup      4096 Oct 27 04:09 server
-rw-r--r--    1 appuser  appgroup       235 Oct 26 04:21 sitemap.xml
drwxrwxrwx    1 appuser  appgroup      4096 Oct 26 04:21 sorteo
drwxrwxrwx    1 appuser  appgroup      4096 Oct 27 04:09 styles
-rw-r--r--    1 appuser  appgroup        26 Oct 27 04:09 test.js
/app $     microservices/integracion_mercadopago_app/pagos.db python3 /app/microservices/integracio
n_mercadopago_app/scripts/query_payment.py 131185946716;
sh: microservices/integracion_mercadopago_app/pagos.db: Permission denied
/app $     echo exit=$? 
exit=126
/app $ python3 -c "import sqlite3; c=sqlite3.connect('/app/microservices/integracion_mercadopago_ap
p/
>     pagos.db'); print('tabla_pagos=', c.execute('select count(*) from sqlite_master where        

>     type="table" and name="pagos"').fetchone()[0]); print('ejemplo=', c.execute('select

>     numero_operacion,status from pagos limit 1').fetchone())"
  File "<string>", line 1
    import sqlite3; c=sqlite3.connect('/app/microservices/integracion_mercadopago_app/
                                      ^
SyntaxError: unterminated string literal (detected at line 1)
/app $ docker compose exec web sh -lc "python3 /app/microservices/integracion_mercadopago_app/scrip
ts/    query_payment.py 131185946716; echo exit=$?"
sh: docker: not found
/app $ docker compose exec web sh -lc "python3 -c 'import sqlite3; c=sqlite3.connect("/app/        

sh: docker: not found
/app $     microservices/integracion_mercadopago_app/pagos.db"); print("tabla_pagos=", c.execute("s
elect
sh: microservices/integracion_mercadopago_app/pagos.db); print(tabla_pagos=, c.execute(select: not found
/app $     count(*) from sqlite_master where type=\"table\" and name=\"pagos\"").fetchone()[0]);   

sh: syntax error: unexpected word (expecting ")")
/app $     print("ejemplo=", c.execute("select numero_operacion,status from pagos limit 1").fetchon
e())'"
sh: syntax error: unexpected word (expecting ")")
/app $